--- a/views/index.jade
+++ b/views/index.jade
@@ -9,6 +9,6 @@ block content
             a(class="btn btn-primary btn-large", href="/login") 登錄 
             a(class="btn btn-large", href="/reg") 立即註冊
     else
-        include say.jade
+        a(href='/posts/new') 发表新文章
     include posts.jade
 
