--- a/views/reg.jade
+++ b/views/reg.jade
@@ -9,7 +9,11 @@ block content
                 div(class="controls")
                     input(type="text",class="input-xlarge",id="username",name="username")
                     p(class="help-block") 你的账户名称，用于登录和显示。
-                
+            div(class="control-group")
+                label(class="control-label" , for="email") email
+                div(class="controls")
+                    input(type="text",class="input-xlarge",id="email",name="email")
+                    p(class="help-block") 电子邮箱  
             div(class="control-group")
                 label(class="control-label" for="password") 口令
                 div(class="controls")
