change for route redirect

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -26,6 +26,8 @@ html
                         else
                             li
                                 a(href="/users/#{user.name}") #{user.name}
+                            li
+                              a(href="/users") 用户列表
                             li 
                                 a(href="/logout") 登出
         div(id="container",class="container")
