--- a/views/reg.jade
+++ b/views/reg.jade
@@ -7,22 +7,22 @@ block content
             div(class="control-group")
                 label(class="control-label" , for="username") 用户名
                 div(class="controls")
-                    input(type="text",class="input-xlarge",id="username",name="username")
+                    input(type="text",class="input-xlarge",id="username",name="username",required="required")
                     p(class="help-block") 你的账户名称，用于登录和显示。
             div(class="control-group")
                 label(class="control-label" , for="email") email
                 div(class="controls")
-                    input(type="text",class="input-xlarge",id="email",name="email")
+                    input(type="text",class="input-xlarge",id="email",name="email",required="required")
                     p(class="help-block") 电子邮箱  
             div(class="control-group")
                 label(class="control-label" for="password") 口令
                 div(class="controls")
-                    input(type="password",class="input-xlarge",id="password",name="password")
+                    input(type="password",class="input-xlarge",id="password",name="password",required="required")
                         
             div(class="control-group")
                 label(class="control-label",for="password-repeat") 重复输入口令
                 div(class="controls")
-                    input(type="password",class="input-xlarge",id="password-repeat",name="password-repeat")
+                    input(type="password",class="input-xlarge",id="password-repeat",name="password-repeat",required="required")
 
             div(class="form-actions")
                 button(type="submit",class="btn btn-primary") 注册
