--- a/views/layout.jade
+++ b/views/layout.jade
@@ -25,7 +25,7 @@ html
                                 a(href="/reg") 註冊
                         else
                             li
-                                a(href="/users/#{user.name}") #{user.name}
+                                a(href="/users/#{user._id}") #{user.name}
                             li
                               a(href="/users") 用户列表
                             li 
