--- a/views/post.jade
+++ b/views/post.jade
@@ -1,7 +1,6 @@
 extends layout
 
 block content
-  form(method="post",action="/posts/#{doc._id}/delete",onSubmit="javascript:return window.confirm('确认删除博客吗？')")
     div 作者 
       a(href="/users/#{doc.user}") #{doc.author}
       img(src='#{doc.avatar}?s=48')
@@ -15,3 +14,36 @@ block content
         a(href="/posts/#{doc._id}/edit") 修改
         a(href="/posts/#{doc._id}/delete",onclick="if(confirm('确定删除?')==false) return false;") 删除
     p 阅读次数 #{doc.pv}
+    each comment in doc.comments
+      div
+        p
+          img(src="#{comment.avatar}?s=30") 
+          a(href="#{comment.website}") #{comment.name}
+          span 回复于 #{comment.time}
+        p= comment.content
+    
+    form(method="post" action="/posts/#{doc._id}/comments")
+      if user
+        姓名：
+        input(type="text" name="name" value="#{user.name}" readonly="readonly")
+        br
+        邮箱：
+        input(type="text" name="email" value="#{user.email}" readonly="readonly")
+        br
+        网址：
+        input(type="text" name="website" value="/users/#{user._id}" readonly="readonly")
+        br
+      else 
+        姓名：
+        input(type="text" name="name" required="required")
+        br
+        邮箱：
+        input(type="text" name="email" required="required")
+        br
+        网址：
+        input(type="text" name="website" value="http://" required="required")
+        br
+      textarea(name="content" rows="5" cols="80")
+      br
+      br
+      input(type="submit" value="留言")
