--- a/views/posts.jade
+++ b/views/posts.jade
@@ -8,5 +8,7 @@ each post, index in posts
           small
             a(href="/users/#{post.user}/posts") #{post.author} 
             发表于  #{post.time}
+        p
+          阅读 #{post.pv} 评论 #{post.comments.length}
     if index % 3 === 2 || index === posts.length - 1
         | </div>
