--- a/views/index.jade
+++ b/views/index.jade
@@ -2,9 +2,9 @@ extends layout
 
 block content
     if !user
-        div(class="hero-unit")
-            h1 歡迎來到 blog
-            p blog 是一個基於 Node.js 的博客系統。
+        div(class="jumbotron")
+            h1 歡迎來到 Cloudblog
+            p Cloudblog 是一個基於 Node.js 的博客系統。
             br
             a(class="btn btn-primary btn-large", href="/login") 登錄 
             a(class="btn btn-large", href="/reg") 立即註冊
