--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,20 +4,22 @@ html
         title= title + "- Microblog"
         link(rel='stylesheet', href='/stylesheets/appstyle.css')
         link(rel='stylesheet', href='/stylesheets/bootstrap.css')
-        link(rel='stylesheet', href='/stylesheets/bootstrap-responsive.css')
     body
-        div(class="navbar navbar-fixed-top")
-          div(class="navbar-inner")
-            div(class="container")
-                a(class="btn btn-navbar",data-toggle="collapse",data-target=".nav-collapse")
+        nav(class="navbar navbar-default")
+          div(class="container-fluid")
+            div(class="navbar-header")
+                button(class="navbar-toggle collapsed",data-toggle="collapse",data-target="#bs-navbar-collapse",aria-expanded="false")
+                    span(class="sr-only") Toggle navigation
                     span(class="icon-bar")
                     span(class="icon-bar")
                     span(class="icon-bar")
-                a(class="brand" href="/") Microblog
-                div(class="nav-collapse")
-                    ul(class="nav")
+                a(class="navbar-brand" href="/") CloudBlog
+                div(class="collapse navbar-collapse" id="bs-navbar-collapse")
+                    ul(class="nav navbar-nav")
                         li(class="active")
-                                a(href="/") 首頁
+                                a(href="/") 
+                                    首頁
+                                    span(class="sr-only") (current)
                         if !user
                             li 
                                 a(href="/login") 登入
@@ -27,21 +29,20 @@ html
                             li
                                 a(href="/users/#{user._id}") #{user.name}
                             li
-                              a(href="/users") 用户列表
+                                a(href="/users") 用户列表
                             li 
                                 a(href="/logout") 登出
         div(id="container",class="container")
             if success
                 div(class="alert alert-success")= success
             if error
-                div(class="alert alert-error")= error
+                div(class="alert alert-danger")= error
     
-          
         block content
         
-    hr
-    footer
-        p   <a href="http://www.cloudzhong.com/" target="_blank">Cloud Zhong</a> 2015
-
-    script(src="/javascripts/jquery.js")
-    script(src="/javascripts/bootstrap.js")
+        hr
+        footer
+            p   <a href="http://www.cloudzhong.com/" target="_blank">Cloud Zhong</a> 2015
+    
+        script(src="/javascripts/jquery.js")
+        script(src="/javascripts/bootstrap.js")
