--- a/views/layout.jade
+++ b/views/layout.jade
@@ -8,30 +8,28 @@ html
         nav(class="navbar navbar-default")
           div(class="container-fluid")
             div(class="navbar-header")
-                button(class="navbar-toggle collapsed",data-toggle="collapse",data-target="#bs-navbar-collapse",aria-expanded="false")
-                    span(class="sr-only") Toggle navigation
+                button(type="button",class="navbar-toggle collapsed",data-toggle="collapse",data-target=".navbarCollapse",aria-expanded="false")
                     span(class="icon-bar")
                     span(class="icon-bar")
                     span(class="icon-bar")
                 a(class="navbar-brand" href="/") CloudBlog
-                div(class="collapse navbar-collapse" id="bs-navbar-collapse")
-                    ul(class="nav navbar-nav")
-                        li(class="active")
-                                a(href="/") 
-                                    首頁
-                                    span(class="sr-only") (current)
-                        if !user
-                            li 
-                                a(href="/login") 登入
-                            li 
-                                a(href="/reg") 註冊
-                        else
-                            li
-                                a(href="/users/#{user._id}") #{user.name}
-                            li
-                                a(href="/users") 用户列表
-                            li 
-                                a(href="/logout") 登出
+            div(class="collapse navbar-collapse navbarCollapse")
+                ul(class="nav navbar-nav")
+                    li(class="active")
+                            a(href="/") 
+                                首頁
+                    if !user
+                        li 
+                            a(href="/login") 登入
+                        li 
+                            a(href="/reg") 註冊
+                    else
+                        li
+                            a(href="/users/#{user._id}") #{user.name}
+                        li
+                            a(href="/users") 用户列表
+                        li 
+                            a(href="/logout") 登出
         div(id="container",class="container")
             if success
                 div(class="alert alert-success")= success
@@ -46,3 +44,8 @@ html
     
         script(src="/javascripts/jquery.js")
         script(src="/javascripts/bootstrap.js")
+        script(type='text/javascript').
+            $(".nav a").on("click", function(){
+               $(".nav").find(".active").removeClass("active");
+               $(this).parent().addClass("active");
+            });
