--- a/views/login.jade
+++ b/views/login.jade
@@ -1,16 +1,11 @@
 extends layout
 
 block content
-    form(class="form-horizontal" method="post")
-        fieldset
-            legend 用戶登入
-            div(class="control-group")
-                label(class="control-label", for="username") 用戶名
-                div(class="controls")
-                    input(type="text",class="input-xlarge",id="username",name="username")
-            div(class="control-group")
-                label(class="control-label" for="password") 口令
-                div(class="controls")
-                    input(type="password",class="input-xlarge",id="password",name="password")
-            div(class="form-actions")
-                button(type="submit",class="btn btn-primary") 登入
+    container
+        form(class="form-signin" method="post")
+            h2(class="form-signin-heading") 用戶登入
+            label(class="sr-only", for="username") 用戶名
+            input(type="text",class="form-control",id="username",placeholder="用戶名",required,autofocus)
+            label(class="sr-only" for="password") 口令
+            input(type="password",class="form-control",id="password",name="password",placeholder="密码",required)
+            button(type="submit",class="btn btn-lg btn-primary btn-block") 登入
