change css class

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -35,8 +35,9 @@ html
                 div(class="alert alert-success")= success
             if error
                 div(class="alert alert-danger")= error
-    
-        block content
+                
+        container
+            block content
         
         hr
         footer
