--- a/views/login.jade
+++ b/views/login.jade
@@ -1,11 +1,10 @@
 extends layout
 
 block content
-    container
-        form(class="form-signin" method="post")
-            h2(class="form-signin-heading") 用戶登入
-            label(class="sr-only", for="username") 用戶名
-            input(type="text",class="form-control",id="username",placeholder="用戶名",required,autofocus)
-            label(class="sr-only" for="password") 口令
-            input(type="password",class="form-control",id="password",name="password",placeholder="密码",required)
-            button(type="submit",class="btn btn-lg btn-primary btn-block") 登入
+    form(class="form-signin" method="post")
+        h2(class="form-signin-heading") 用戶登入
+        label(class="sr-only", for="username") 用戶名
+        input(type="text",class="form-control",id="username",name="username",placeholder="用戶名",required,autofocus)
+        label(class="sr-only" for="password") 口令
+        input(type="password",class="form-control",id="password",name="password",placeholder="密码",required)
+        button(type="submit",class="btn btn-lg btn-primary btn-block") 登入
