--- a/views/reg.jade
+++ b/views/reg.jade
@@ -7,22 +7,22 @@ block content
             div(class="form-group")
                 label(class="col-sm-2 control-label" , for="username") 用户名
                 .col-sm-3
-                    input(type="text",class="form-control",id="username",required="required")
+                    input(type="text",class="form-control",id="username",name="username",required="required")
                     span(class="help-block") 你的账户名称，用于登录和显示。
             div(class="form-group")
                 label(class="col-sm-2 control-label" , for="email") email
                 .col-sm-3
-                    input(type="email",class="form-control",id="email",required="required")
+                    input(type="email",class="form-control",id="email",name="email",required="required")
                     span(class="help-block") 电子邮箱  
             div(class="form-group")
                 label(class="col-sm-2 control-label" for="password") 口令
                 .col-sm-3
-                    input(type="password",class="form-control",id="password",required="required")
+                    input(type="password",class="form-control",id="password",name="password",required="required")
                         
             div(class="form-group")
                 label(class="col-sm-2 control-label",for="password-repeat") 重复输入口令
                 .col-sm-3
-                    input(type="password",class="form-control",id="password-repeat",required="required")
+                    input(type="password",class="form-control",id="password-repeat",name="password-repeat",required="required")
 
             div(class="form-group")
                 div(class="col-sm-offset-2 col-sm-3")
