--- a/public/stylesheets/appstyle.css
+++ b/public/stylesheets/appstyle.css
@@ -1,5 +1,7 @@
 body {
   padding-bottom: 40px;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
 .form-signin {
@@ -27,7 +29,7 @@ body {
   z-index: 2;
 }
 .form-signin input[type="text"] {
-  margin-bottom: -1px;
+  margin-bottom: 10px;
   border-bottom-right-radius: 0;
   border-bottom-left-radius: 0;
 }
