--- a/views/layout.jade
+++ b/views/layout.jade
@@ -36,7 +36,7 @@ html
             if error
                 div(class="alert alert-danger")= error
                 
-        container
+        div(class="container")
             block content
         
         hr
