--- a/views/post_new.jade
+++ b/views/post_new.jade
@@ -3,7 +3,7 @@ extends layout
 block content
     form(class="form-horizontal" method="post" action="/posts")
         div(class="form-group")
-            h3(class="col-sm-offset-1 col-sm-1") 發表博客
+            h3(class="page-header") 發表博客
         div(class="form-group")
             label(class="col-sm-1 control-label" for="title") 标题：
             .col-sm-3
