--- a/views/post_edit.jade
+++ b/views/post_edit.jade
@@ -3,7 +3,7 @@ extends layout
 block content
   form(class="form-horizontal" method="post")
       div(class="form-group")
-          h3(class="col-sm-offset-1 col-sm-1") 修改博客
+          h3(class="page-header") 修改博客
           
       div(class="form-group")
           label(class="col-sm-1 control-label" , for="title") 标题：
