--- a/views/posts.jade
+++ b/views/posts.jade
@@ -1,7 +1,7 @@
 each post, index in posts
     if index % 3 === 0 
         | <div class="row">
-    .col-sm-3
+    .col-md-4
         h2
           a(href='/posts/#{post._id}')= post.title
         p
