--- a/views/post_new.jade
+++ b/views/post_new.jade
@@ -12,7 +12,7 @@ block content
         div(class="form-group")
             label(class="col-sm-1 control-label" for="tag") 标签：
             .col-sm-3
-                input(type="text",class="form-control",id="tag",name="title")
+                input(type="text",class="form-control",id="tag",name="tag")
                     
         div(class="form-group")
             label(class="col-sm-1 control-label" for="content") 正文：
